--- a/attacks/config.json
+++ b/attacks/config.json
@@ -1,6 +1,6 @@
 {
     "timesToSend": 10,
-    "url": "http://localhost:3000/api/Feedbacks/",
+    "url": "http://juice.f5trn.com/api/Feedbacks/",
     "payload": {
         "comment": "repeating feeback 10 times",
         "rating": 1,
